# us-etf-trend-vol-v0.1-fixed

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  realdata-advisory.yml
configs/: cost_model.yaml  risk_limits.yaml  strategy_advisory.yaml  strategy_ibkr_paper.yaml  universe_us_etf.yaml
docs/: CODEX_TASKS.md
examples/: current_portfolio.csv
src/us_etf_trend_vol/: cli.py  config.py  schema.py  utils.py
src/us_etf_trend_vol/agents/: manifest.yaml
src/us_etf_trend_vol/backtest/: engine.py
src/us_etf_trend_vol/data/: pipeline.py  providers.py
src/us_etf_trend_vol/execution/: ibkr_paper.py  orders.py
src/us_etf_trend_vol/portfolio/: construction.py
src/us_etf_trend_vol/reporting/: report.py
src/us_etf_trend_vol/risk/: metrics.py
src/us_etf_trend_vol/signals/: engine.py
tests/: test_backtest.py  test_config.py  test_orders.py  test_pipeline.py
